# minty-the-hexapod

./: .gitignore  CMakeLists.txt  LICENSE  README.md  firmware.py  plot_sync.py
arduino/: arduino.ino  upload.sh
include/: Brain.h  Controller.h  Coord.h  Gaits.h  HexapodController.h  InverseKinematics.h  Leg.h  PeriodicCallback.h  SerialPort.h  ServoDriver.h  StateTransmitter.h  gaits.h  periodicCallback.h  serial_writer.h
src/: Brain.cpp  Controller.cpp  Gaits.cpp  HexapodController.cpp  InverseKinematics.cpp  Leg.cpp  PeriodicCallback.cpp  ServoDriver.cpp  StateTransmitter.cpp  main.cpp  periodicCallback.cpp
util/: terminal_to_serial.cpp  visualise_points.py
util/kinematics/: README.md  leg_trajectory0.csv  leg_trajectory1.csv  simulation.cpp  visualise_leg.py  workspace.py
util/kinematics/dh_kinematics/: DHTable.py  Kinematics.py  LegKinematics.py  Visualiser.py  constants.py  default.txt  util.py  workspace.py
